Fixed spacing around social media icons in mobile view, added comments on HTML page

--- a/css/style.css
+++ b/css/style.css
@@ -87,9 +87,9 @@ hr {
   color: #030301;
 }
 
-i {
+/* i {
   padding-right: 1.5em;
-}
+} */
 
 .tablink:hover {
   background-color: #777;
@@ -663,17 +663,19 @@ span {
   padding: 3px;
   background-color: #555;
   color: white;
-  text-align: center;
+  /* text-align: center; */
   padding: 1.0em 0;
   font-size: var(--fs-h3);
 }
 
 .footer > p {
-  margin-top: 25px;
+  /* margin-top: 25px; */
 }
 
 .footer-email {
   margin-top: 10px;
+  font-size: 16px;
+  text-align: center;
 }
 
 .footer a {
@@ -699,18 +701,22 @@ span {
   display: flex;
   justify-content: center;
   flex-direction: row;
-  margin: .75em 0 0 5em;
   padding: 0;
   flex-wrap: inherit;
-  font-size: 20px;
+  /* font-size: 20px; */
 }
 
 .social-list__item {
-  margin: 0 .5em;
+  /* margin: 0 .5em; */
 }
 
 .social-list__link {
-  padding: .5em;
+  padding: 35px;
+}
+
+.social-list__item i {
+  font-size: 30px;
+  /* color: red; */
 }
 
 
@@ -779,6 +785,11 @@ span {
     margin: 5px;
   }
 
+  .learning-header{
+    font-size: 45px;
+    line-height: 75px;
+  }
+
   .footer {
     display: flex;
     flex-wrap: wrap;
@@ -792,7 +803,11 @@ span {
   }
 
   .social-list {
-    margin: .75em 0 0 48px;
+    /* margin: .75em 0 0 48px; */
+  }
+
+  .social-list__item i {
+    /* color: red; */
   }
 
   .about-img{
